tests/errors/3_definition_errors/use_function_as_variabe.java
//v inicializacii statickej premennej je identifikator funkcie bez zatvoriek
//navrat 3
// Autorka testu: Martina G.

class Main {
	static int x = a;
	static void run() {
		
	}
	static int a(){
		int b = 2;
	}
}
